--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <div class="footer_main_nav_item_two">
                     <a id="link">Адреса магазинов</a>
 
-                    <div id="modal" class="modal_hidden" data-modal="1">
+                    <div id="modal" class="modal_hidden">
                         <svg id="closeModalButton" class="modal__cross" xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 24 24">
                             <path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/>
@@ -412,6 +412,7 @@
                         </div>
                     </div>
 
+                    <div id="overlay" class="overlay_hidden"></div>
 
                     <a href="https://www.dns-shop.kz/help/useful-information/f1285927-1b83-491d-816b-bf68a0803f91/">
                         Как оформить заказ
@@ -490,7 +491,6 @@
         </div>
     </div>
 </footer>
-<div id="overlay" class="overlay_hidden"></div>
 <script src="index.js"></script>
 </body>
 </html>
